--- a/frontend/src/component/Home/Home.css
+++ b/frontend/src/component/Home/Home.css
@@ -1,5 +1,6 @@
 .banner {
-  background-image: url("../../images/cover.jfif");
+  /* background-image: url("../../images/cover.jfif"); */
+  background-image: url("../../images/arrangement-black-friday-shopping-carts-with-copy-space.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -46,7 +47,8 @@
   position: absolute;
   top: 0%;
   left: 0;
-  clip-path: polygon(100% 68%, 0 100%, 100% 100%);
+  /* clip-path: polygon(100% 68%, 0 100%, 100% 100%); */
+  clip-path: polygon(50% 85%, 100% 70%, 100% 100%, 0 100%, 0% 70%);
   max-width: 100%;
 }
 
